# omni-pca

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/omni_pca/: README.md  __init__.py  alarm_control_panel.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  event.py  helpers.py  light.py  manifest.json  sensor.py  services.py  services.yaml  switch.py  websocket.py
custom_components/omni_pca/frontend/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
custom_components/omni_pca/frontend/src/: omni-panel-programs.ts  token-renderer.ts  types.ts
custom_components/omni_pca/translations/: en.json
custom_components/omni_pca/www/: panel.js
dev/: Makefile  README.md  add_real_panel.py  docker-compose.yml  probe_v1.py  probe_v1_client.py  probe_v1_coordinator.py  probe_v1_recon.py  probe_v1_stream.py  probe_v1_write.py  run_mock_panel.py  screenshot.py  screenshot_arg2_object.py  screenshot_overview.py
docs/: JOURNEY.md
grafana/: .env.example  README.md  docker-compose.yml  ha-snippet.yaml
grafana/provisioning/dashboards/: dashboards.yml  omni-pro-ii.json
grafana/provisioning/datasources/: influxdb.yml
src/omni_pca/: __init__.py  __main__.py  client.py  commands.py  connection.py  crypto.py  events.py  message.py  mock_panel.py  models.py  opcodes.py  packet.py  pca_file.py  program_engine.py  program_renderer.py  programs.py
src/omni_pca/v1/: __init__.py  adapter.py  client.py  connection.py  messages.py
tests/: conftest.py  test_client.py  test_commands.py  test_connection.py  test_crypto.py  test_e2e_client_mock.py  test_e2e_program_echo.py  test_e2e_udp.py  test_e2e_v1_mock.py  test_events.py  test_ha_config_flow_validation.py  test_ha_helpers.py  test_ha_imports.py  test_message.py  test_mock_panel.py  test_models.py  test_models_extended.py  test_opcodes.py  test_packet.py  test_pca_file.py  test_program_engine.py  test_program_renderer.py  test_programs.py  test_v1_client_commands.py  test_v1_messages.py
tests/ha_integration/: __init__.py  conftest.py  test_pca_source.py  test_program_websocket.py  test_setup.py
